--- a/Proyecto FastFood/index.html
+++ b/Proyecto FastFood/index.html
@@ -8,7 +8,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="css/index.css" rel="stylesheet">
-  link
+  
 </head>
 <body>
 
@@ -26,7 +26,7 @@
           <a class="nav-link" href="Menu.html">Menú</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Acerca de</a>
+          <a class="nav-link" href="AcercaDe.html">Acerca de</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contacto</a>
@@ -53,17 +53,31 @@
   <div id="servicios-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="IMG/cesar.jpg" alt="LitleCesar">
+        <a href="MenoPizza.html"> 
+        <img class="d-block w-100" src="IMG/cesar.jpg" alt="LitleCesar"> </a>
       </div>
       <div class="carousel-item">
+        <a href="MenuKfc.html">
         <img class="d-block w-100" src="IMG/KFC.jpg" alt="KFC">
+        </A>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="IMG/totino.png" alt="Totino's">
+        <A href="MenoPizza.html">
+        <img class="d-block w-100" src="IMG/totino.png" alt="Totino's"> </A>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="IMG/DOMINOS_LOGO.png" alt="Dominos">
+        <a href="MenoPizza.html">
+        <img class="d-block w-100" src="IMG/DOMINOS_LOGO.png" alt="Dominos"> </a>
       </div>
+      <div class="carousel-item">
+        <a href="MenuMcDonals.html">
+        <img class="d-block w-100" src="IMG/King.png" alt="Pizza Hut"> </a>
+        </div>
+        <div class="carousel-item">
+          <a href="MenuMcDonals.html">
+          <img class="d-block w-100" src="IMG/MAC.png" alt="Pizza Hut"> </a>
+          </div>
+
     </div>
     <a class="carousel-control-prev" href="#servicios-carousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
